# mcp-computer-use

./: .gitignore  Cargo.toml  README.eo.md  README.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: ci.yml  prerelease.yml  release.yml
src/: browser.rs  browser_manager.rs  cdp_browser.rs  config.rs  driver.rs  main.rs  tools.rs
