[package]
name = "mcp-computer-use"
version = "0.1.0"
edition = "2021"
authors = ["hugefiver"]
description = "MCP server for browser control using thirtyfour, implementing Gemini computer use predefined tools"
license = "MIT"
repository = "https://github.com/hugefiver/mcp-computer-use"
keywords = ["mcp", "browser", "automation", "webdriver", "gemini"]
categories = ["development-tools", "web-programming"]

[dependencies]
# MCP SDK
rmcp = { version = "0.10", features = ["server", "transport-io", "transport-sse-server", "transport-streamable-http-server", "macros", "schemars"] }

# Browser automation
thirtyfour = { version = "0.36", features = ["tokio-multi-threaded"] }

# HTTP server for streamable HTTP transport
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for screenshots
base64 = "0.22"

# Utilities
async-trait = "0.1"
which = "7"
tokio-util = { version = "0.7", features = ["rt"] }

# Schema generation
schemars = { version = "1.0", features = ["chrono04"] }

[features]
default = ["http-server"]
http-server = ["dep:axum", "dep:tower"]

[[bin]]
name = "mcp-computer-use"
path = "src/main.rs"
