[package]
name = "mcp-computer-use"
version = "0.1.0"
edition = "2021"
authors = ["hugefiver"]
description = "MCP server for browser control using thirtyfour, implementing Gemini computer use predefined tools"
license = "MIT"
repository = "https://github.com/hugefiver/mcp-computer-use"
keywords = ["mcp", "browser", "automation", "webdriver", "gemini"]
categories = ["development-tools", "web-programming"]

[dependencies]
# MCP SDK
rmcp = { version = "0.10", features = ["server", "transport-io", "transport-sse-server", "transport-streamable-http-server", "macros", "schemars"] }

# Browser automation
thirtyfour = { version = "0.36", features = ["tokio-multi-threaded"] }

# Direct CDP (Chrome DevTools Protocol) support for CDP mode
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }

# Driver download support
zip = "2.1"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1.0"
tar = "0.4"

# HTTP server for streamable HTTP transport
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for screenshots
base64 = "0.22"

# Utilities
async-trait = "0.1"
which = "8"
tokio-util = { version = "0.7", features = ["rt"] }

# Schema generation
schemars = { version = "1.0", features = ["chrono04"] }

# File locking for concurrent downloads (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# File locking for concurrent downloads (Windows only)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[features]
default = ["http-server"]
http-server = ["dep:axum", "dep:tower"]

[[bin]]
name = "mcp-computer-use"
path = "src/main.rs"
